Revert previous attempts. Substitute isBlank() with legacy approaches